# vulkan_volume_renderer

./: .gitignore  README.md  make_project.py  pyproject.toml
proj/static_render/: main.cpp  physics.cu  physics.h  ui.cpp  ui.h  xmake.lua
proj/static_render/config/: config.json
proj/static_render/scripts/: generate_uniform_field.py  npy_to_image.py  pcg_fire_colors.py  split_field_from_rigid_couple_sim.py  split_field_from_vti.py  vti_2_numpy.py
src/engine/: engine.cpp  engine.h  xmake.lua
src/engine/core/config/: config.cpp  config.h  xmake.lua
src/engine/core/filesystem/: file.cpp  file.h
src/engine/core/math/: math.h
src/engine/core/tool/: enum_bit_op.h  logger.cpp  logger.h  recorder.cpp  recorder.h  sh.cpp  sh.h  uuid.h
src/engine/core/vulkan/: debug_messager.cpp  debug_messager.h  descriptor_manager.cpp  descriptor_manager.h  queue_family_indices.h  swapchain_support.h  vulkan_context.cpp  vulkan_context.h  vulkan_to_imgui.h  vulkan_util.cpp  vulkan_util.h
src/engine/function/: global_context.cpp  global_context.h
src/engine/function/physics/: cuda_engine.cu  cuda_engine.h  physics_engine.h
src/engine/function/render/: render_engine.cpp  render_engine.h  vulkan_recorder_buffer.cpp  vulkan_recorder_buffer.h
src/engine/function/resource_manager/: resource_manager.cpp  resource_manager.h
src/engine/function/tool/: fire_light_updater.cu  fire_light_updater.h  geometry.cpp  geometry.h
src/engine/function/type/: aabb.h  camera.cpp  camera.h  field.cpp  field.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  (+3 more)
(+44 files in other folders)
