[project]
name = "rtf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "none", email = "none" },
]
dependencies = [
    "pyvista>=0.44.1",
    "numpy>=2.1.2",
    "taichi>=1.7.2",
    "pillow>=11.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pyright]
typeCheckingMode = "off"
